--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.3.1",
+    "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.2",
     "vue": "^2.5.16",
     "vue-loader": "^14.2.1",
-    "vue-template-compiler": "^2.5.16"
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
